<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kuisWeb.css.KuisCSSActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/choice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Question to answer"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="A"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/choice2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="B"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/choice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="C"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/choice4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="D"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="-58dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#d4390a"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Skor"
            android:textColor="#ffff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/score_text"
            android:layout_centerHorizontal="true"
            android:text="0/0"
            android:textColor="#fff"
            android:textSize="15dp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>