<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueberry"
    tools:context=".awal.login.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tV_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorGrey"
            android:theme="@style/Theme.App.Base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageVi_regis">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nama"
                android:textColor="@color/colorGrey"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:id="@+id/tV_nama"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Nama"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            android:inputType="text"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:paddingLeft="16sp"-->
<!--            android:paddingRight="16sp"-->
<!--            app:errorEnabled="true"-->
<!--            android:textColorHint="@color/colorGrey"-->
<!--            android:theme="@style/Theme.App.Base"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/imageVi_regis" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tV_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorGrey"
            android:theme="@style/Theme.App.Base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tV_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColor="@color/colorGrey"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:id="@+id/tV_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingLeft="16sp"-->
<!--            android:paddingRight="16sp"-->
<!--            app:errorEnabled="true"-->
<!--            android:textColorHint="@color/colorGrey"-->
<!--            android:theme="@style/Theme.App.Base"-->
<!--            android:hint="Email"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            android:inputType="textEmailAddress"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tV_nama"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tV_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:textColorHint="@color/colorGrey"
            android:theme="@style/Theme.App.Base"
            app:layout_constraintTop_toBottomOf="@id/tV_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kata Sandi"
                android:inputType="textPassword"
                android:textColorHint="@color/colorDaffodil"
                android:textColor="@color/colorGrey"/>

        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:id="@+id/tV_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingLeft="16sp"-->
<!--            android:paddingRight="16sp"-->
<!--            android:hint="Kata Sandi"-->
<!--            android:inputType="textPassword"-->
<!--            android:textColorHint="@color/colorGrey"-->
<!--            android:theme="@style/Theme.App.Base"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tV_email" />-->

        <ImageView
            android:id="@+id/imageVi_regis"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/img_logo_login"
            android:padding="4dp"
            android:src="@drawable/logo_biru_dongker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_login"
            android:text="Daftar"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBlueberry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tV_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>