<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueberry"
    tools:context=".awal.login.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <EditText-->
<!--            android:id="@+id/eT_loginEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="24dp"-->
<!--            android:paddingLeft="16sp"-->
<!--            android:paddingRight="16sp"-->
<!--            app:errorEnabled="true"-->
<!--            android:textColorHint="@color/colorGrey"-->
<!--            android:theme="@style/Theme.App.Base"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/imageView"-->
<!--            android:hint="Email"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            android:inputType="textEmailAddress"/>-->

<!--        <EditText-->
<!--            android:id="@+id/eT_loginPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:errorEnabled="true"-->
<!--            android:paddingLeft="16sp"-->
<!--            android:paddingRight="16sp"-->
<!--            android:textColorHint="@color/colorGrey"-->
<!--            android:theme="@style/Theme.App.Base"-->
<!--            app:layout_constraintTop_toBottomOf="@id/eT_loginEmail"-->
<!--            app:passwordToggleEnabled="true"-->
<!--            app:passwordToggleTint="@color/colorGrey"-->
<!--            android:hint="Kata Sandi"-->
<!--            android:textColor="@color/colorGrey"-->
<!--            android:inputType="textPassword" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eT_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorGrey"
            android:theme="@style/Theme.App.Base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColor="@color/colorGrey"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eT_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:textColorHint="@color/colorGrey"
            android:theme="@style/Theme.App.Base"
            app:layout_constraintTop_toBottomOf="@id/eT_loginEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGrey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kata Sandi"
                android:textColor="@color/colorGrey"
                android:inputType="textPassword"
                android:textColorHint="@color/colorDaffodil" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/img_logo_login"
            android:padding="4dp"
            android:src="@drawable/logo_biru_dongker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tV_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16sp"
            android:onClick="LupaPassword"
            android:text="Lupa Kata Sandi?"
            android:textColor="@color/colorGrey"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eT_loginPassword" />


        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_login"
            android:text="Masuk"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBlueberry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tV_forgot" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Akun Baru? "
                android:textColor="@color/colorGrey" />

            <TextView
                android:id="@+id/tV_registrasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daftar disini"
                android:textColor="@color/colorDaffodil"
                android:onClick="Register"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>