<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beranda.BerandaActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vP_beranda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/colorBlueberry"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="100dp"
            app:navigationIcon="@drawable/ic_about" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorDaffodil"
            app:layout_anchor="@id/bottom_app_bar"
            app:srcCompat="@drawable/ic_add_white_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="invisible"
            app:backgroundTint="@color/colorDaffodil"
            app:layout_anchor="@+id/fab_index"
            app:srcCompat="@drawable/ic_kuis" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="invisible"
            app:backgroundTint="@color/colorDaffodil"
            app:layout_anchor="@+id/fab_index"
            app:layout_anchorGravity="right"
            app:srcCompat="@drawable/ic_qna" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>